# RTC-Egress

./: .clang-format  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.prod  Gemini.md  Makefile  README.md  ag_egress.service  build.sh  composition_mode_design.md  docker-compose-ag_egress.yml  docker-compose-external-redis.yml  docker-compose-redis-dev.yml  docker-compose.yml  docker-entrypoint.sh  egress-recorder.service  go.mod  go.sum  install-service.sh  kill_eg_worker.sh  prettifier.sh  requests.sh  rtc_egress.service  rtc_pts_design.md
.github/workflows/: docker-build.yml  docker-debug.yml  release.yml
cmd/api_server/: Dockerfile  Dockerfile.debug  main.go  main_test.go
cmd/egress/: Dockerfile  Dockerfile.debug  main.go  main_test.go
cmd/flexible_recorder/: Dockerfile  Dockerfile.debug  main.go  main_test.go
cmd/uploader/: Dockerfile  Dockerfile.debug  main.go  main_test.go
cmd/webhook_notifier/: Dockerfile  Dockerfile.debug  main.go  main_test.go
config/: api_server_config.yaml.example  egress_config.yaml.example  flexible_recorder_config.yaml.example  uploader_config.yaml.example  webhook_notifier_config.yaml.example
deployment/docker_compose/: docker-compose-external-redis.yml  docker-compose-redis-debug.yml
deployment/kubernetes/: 01-namespace.yaml  02-redis.yaml  03-egress-deployment.yaml  04-webhook-notifier-deployment.yaml  05-web-recorder-deployment.yaml  06-hpa-configs.yaml  07-configmaps-secrets.yaml  08-storage.yaml  09-monitoring.yaml  README.md
designs/: composition_mode_design.md  images_building_design.md  restful_api_design.md  rtc_pts_design.md  task_dispatching_design.md  unified_pod_architecture_design.md  validation_security_design.md  vars_config_design.md  worker_recovery_design.md
pkg/egress/: manager.go  manager_test.go  protocol.go  protocol_test.go  web_recorder_proxy.go
pkg/health/: manager.go  manager_test.go
pkg/logger/: logger.go  logger_test.go
pkg/queue/: redis_queue.go  redis_queue_test.go
pkg/uploader/: types.go  watcher.go
pkg/utils/: config.go  env.go  logger.go  random.go  random_test.go  string.go  string_test.go
pkg/version/: version.go  version_test.go
pkg/webhook/: notifier.go
server/: main.go
server/egress/: manager.go  protocol.go
server/health/: api.go  manager.go
server/queue/: redis_queue.go
server/uploader/: s3uploader.go  watcher.go
src/: frame_processor.cpp  layout_detector.cpp  main.cpp  metadata_manager.cpp  recording_sink.cpp  rtc_client.cpp  rtmp_cdn_demo.cpp  snapshot_encoder.cpp  snapshot_sink.cpp  task_connection_observer.cpp  task_pipe.cpp  ts_segment_manager.cpp  video_compositor.cpp  video_frame.cpp
src/common/: ffmpeg_utils.cpp  ffmpeg_utils.h  file_utils.cpp  file_utils.h  log.h  sample_common.cpp  sample_common.h
src/include/: frame_processor.h  layout_detector.h  metadata_manager.h  recording_sink.h  rtc_client.h  snapshot_encoder.h  snapshot_sink.h  task_connection_observer.h  task_pipe.h  ts_segment_manager.h  uds_message.h  video_compositor.h  video_frame.h
tests/: CMakeLists.txt  av_sync_tests.cpp  composition_tests.cpp  fake_webhook_server.go  real_component_tests_simple.cpp  real_file_generation_tests.cpp  snapshot_filter_tests.cpp  test_dynamic_layout.yaml  test_layout_calculation  test_layout_calculation.cpp  test_multi_user.yaml  test_single_user.yaml  video_compositor_real_test.cpp
web/template/: index.html
